# Electric-Fields-Visualizer

./: .gitignore  IMPLEMENTATION_NOTES.md  README.md  WEBGL_WEBGPU_COMPARISON.md  commits.txt  index.html  package-lock.json  package.json  tash list  tsconfig.json  vite.config.ts  wrangler.jsonc
backend/: .gitignore  CMakeLists.txt  README.md  SETUP_NOTES.md
backend/common/: CommonTypes.h
backend/gpu/: VulkanManager.cpp  VulkanManager.h
backend/gpu/kernels/: kernels.cu  updateAlphaBeta.cu
backend/protocol/: Protocol.cpp  Protocol.h
backend/server/: Server.cpp  Server.h  main.cpp
backend/session/: Session.cpp  Session.h  SessionManager.cpp  SessionManager.h
backend/simulation/: FDTD3D.cpp  FDTD3D.h
backend/utils/: Compression.cpp  Compression.h
cloud/: colab_quickstart.ipynb  deploy_modal.py  fdtd_engine.py  fdtd_server.py  run_local.sh  test_engine.py
src/: canvas.tsx  client.tsx  index.css  index.tsx  main.tsx  vite-env.d.ts  webgpu.ts
src/controllers/: ThreeWorkspace.tsx
src/hooks/: useLegacyVoltagePoints.ts  useSelection.ts  useSimObjects.ts  useSimulationClock.ts  useSimulationProvider.ts  useWebGPU.tsx
src/models/: Charge.ts  ChargeImplementation.tsx  FDTDSimulation.ts  LineProbe.ts  SimulationSource.ts  TwoPointProbe.ts  VoltagePoint.ts  loadShaders.ts
src/panels/: GlobalsPanel.tsx  InspectorPanel.tsx  LegacyVoltagePointPanel.tsx  ObjectsListPanel.tsx
src/physics/: Charge.ts
src/protocol/: Protocol.ts
src/scene/: WorkspaceScene.ts
src/scripts/: ChargeImplementation.tsx  ChargeImplementationRemote.tsx  ThreeWorkspace.tsx
(+57 files in other folders)
